--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rmc-dialog@0.0.1-alpha.0 - mobile dialog ui component for react</title>
+  <title>rmc-dialog@0.0.1-alpha.4 - mobile dialog ui component for react</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rmc-dialog@0.0.1-alpha.0</h1>
+  <h1>rmc-dialog@0.0.1-alpha.4</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -752,7 +752,7 @@
 <div id="readme" class="boxed-group">
   <h3>README.md</h3>
   <div class="markdown-body">
-    <h1>rmc-dialog<a id="user-content-rmc-dialog" name="rmc-dialog" class="anchor" aria-hidden="true" href="#rmc-dialog"><span class="octicon octicon-link"></span></a></h1><hr>
+    <h1>m-dialog<a id="user-content-m-dialog" name="m-dialog" class="anchor" aria-hidden="true" href="#m-dialog"><span class="octicon octicon-link"></span></a></h1><hr>
 <p>react dialog component for mobile</p>
 <p><a href="http://npmjs.org/package/rmc-dialog" title="null"><img src="http://img.shields.io/npm/v/rmc-dialog.svg?style=flat-square" alt="NPM version"></a>
 <a href="https://travis-ci.org/react-component/m-dialog" title="null"><img src="https://img.shields.io/travis/react-component/m-dialog.svg?style=flat-square" alt="build status"></a>
